Updated by task 'FY24_February_DX_RNs_HO1'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/f459933cbaa67994a11237f8c1e5b2e4694f75be

--- a/c-legacy-releases/2024/01112024.md
+++ b/c-legacy-releases/2024/01112024.md
@@ -6,9 +6,9 @@ last-update: January 2024
 author: mfrei
 mini-toc-levels: 2
 source-git-commit: f459933cbaa67994a11237f8c1e5b2e4694f75be
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '6396'
-ht-degree: 99%
+ht-degree: 100%
 
 ---
 
@@ -31,7 +31,7 @@ ht-degree: 99%
 
 ## 2024 年 1 月
 
-最新更新： **2024年2月7**
+最近更新：**2024 年 2 月 7 日**
 
 * [[!DNL Experience League] 活動與最新訊息](#events) (**2 月 7 日**&#x200B;更新)
 * [[!DNL Adobe GenStudio]](#genstudio) - **新增！**
@@ -67,11 +67,11 @@ ht-degree: 99%
 
 ### Experience League 活動
 
-已更新 **2024年2月7**
+更新日期：**2024 年 2 月 7 日**
 
 +++即將推出的 Experience League 活動
 
-* **[!DNL EXPERIENCE PLATFORM]** | Experience League即時 | _使用案例教戰手冊：自助範本，按幾下即可部署使用案例_ | 瞭解使用案例教戰手冊如何按幾下就能將行銷目標轉換為實施物件！ | **太平洋時間 2 月 8 日上午 9:00** | [註冊](https://engage.adobe.com/ExpLeagueLive-240208.html)
+* **[!DNL EXPERIENCE PLATFORM]** |Experience League LIVE | _使用案例教戰手冊：自助使用範本部署簡易操作的使用案例_ | 了解使用案例教戰手冊如何在彈指間將您的行銷目標轉化為實施目標！| **太平洋時間 2 月 8 日上午 9:00** | [註冊](https://engage.adobe.com/ExpLeagueLive-240208.html)
 
 * **[!DNL WORKFRONT]** | 客戶研討會 | _Connect：產業圈 - 高等教育_ | 第一個產業圈將於 2024 年推出，這是一個非正式的圓桌討論會，旨在將高等教育中的 [!DNL Workfront] 管理員聚集在一起，建立聯繫，分享經驗、學習和最佳實務。| **太平洋時間 2 月 8 日上午 9:00** | [註冊](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,PiX3iDTmREqs2eOICcUIoA,5KJVGb6S_Uiiki7ErNALgw,HXNYzHfgZEyqwzniykMx3A,PncbLSMUO0uljcEW9Br4Yw,MM54OINvfUGLghA2cPG1Rg?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
 
