Updated by task 'AUTO_TM_MT_1710521790544'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/4c1b46ffb7598946d87cd1d61330cf2a694d853e

--- a/c-legacy-releases/2024/02142024.md
+++ b/c-legacy-releases/2024/02142024.md
@@ -5,9 +5,9 @@ doc-type: release notes
 last-update: February 2024
 author: mfrei
 mini-toc-levels: 2
-source-git-commit: 657c2a1c3a794795904bddbc478b85afd7bc7d8c
+source-git-commit: dfbb8e7d15a3cd7c00a3078b0138a5a832a818a9
 workflow-type: tm+mt
-source-wordcount: '5363'
+source-wordcount: '5304'
 ht-degree: 99%
 
 ---
@@ -34,7 +34,6 @@ ht-degree: 99%
 最近更新：**2024 年 2 月 28 日**
 
 * [[!DNL Experience League] 活動和更新](#events) (已更新 **2月28日**)
-* [[!DNL Adobe GenStudio]](#genstudio)
 * [Adobe 的認證](#certification)
 * [[!DNL Adobe System Status]](#status)
 * [[!DNL Adobe Experience Cloud] - 統一介面與管理](#ecloud)
@@ -70,21 +69,7 @@ ht-degree: 99%
 
 +++詳細資訊
 
-檢視更多[即將舉行的活動](https://experienceleague.adobe.com/events/)或瀏覽 Experience League 上的[活動錄影](https://experienceleague.adobe.com/docs/events/experience-league-recorded-events/overview.html?lang=zh-Hant)。
-
-+++
-
-## ![圖示](/assets/experience-league.png) Adobe GenStudio {#genstudio}
-
-[Adobe [!DNL GenStudio]](https://business.adobe.com/solutions/adobe-genstudio.html) 是一種端對端解決方案，可透過生成式 AI 和智慧自動化來加速和簡化您的內容供應鏈。
-
-+++詳細資訊
-
-| 發佈日期 | 名稱 | 類型 | 說明 |
-| -----------| ---------- | ---------- | ---------- |
-| 2024 年 2 月 | [GenStudio 教學課程](https://experienceleague.adobe.com/docs/genstudio-learn/tutorials/overview.html?lang=zh-Hant) | 影片 | 查看有關新 [!DNL Adobe GenStudio] 的 Experience League 教學課程。[!DNL GenStudio]Adobe 是一種端對端解決方案，可透過生成式 AI 和智慧自動化來加速和簡化您的內容供應鏈。 |
-
-{style="table-layout:auto"}
+檢視更多[即將舉行的活動](https://experienceleague.adobe.com/events/)或瀏覽 Experience League 上的[活動錄影](https://experienceleague.adobe.com/docs/events/experience-league-recorded-events/overview.html)。
 
 +++
 
