Updated by task 'AUTO_TM_MT_1710840440288'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/4c1b46ffb7598946d87cd1d61330cf2a694d853e

--- a/c-legacy-releases/2024/02142024.md
+++ b/c-legacy-releases/2024/02142024.md
@@ -8,7 +8,7 @@ mini-toc-levels: 2
 source-git-commit: dfbb8e7d15a3cd7c00a3078b0138a5a832a818a9
 workflow-type: tm+mt
 source-wordcount: '5304'
-ht-degree: 99%
+ht-degree: 100%
 
 ---
 
@@ -33,7 +33,7 @@ ht-degree: 99%
 
 最近更新：**2024 年 2 月 28 日**
 
-* [[!DNL Experience League] 活動和更新](#events) (已更新 **2月28日**)
+* [[!DNL Experience League] 活動與最新訊息](#events) (更新日期：**2 月 28 日**)
 * [Adobe 的認證](#certification)
 * [[!DNL Adobe System Status]](#status)
 * [[!DNL Adobe Experience Cloud] - 統一介面與管理](#ecloud)
@@ -395,7 +395,7 @@ _版本重點_
 
 >[!NOTE]
 >
->AEM 6.4 現在已終止延伸支援。如需更多詳細資料，請參閱 Adobe 的[技術支援期間](https://helpx.adobe.com/tw/support/programs/eol-matrix.html)。請到[這裡](https://experienceleague.adobe.com/docs/?lang=en)尋找支援的版本。
+>AEM 6.4 現在已終止延伸支援。如需更多詳細資料，請參閱 Adobe 的[技術支援期間](https://helpx.adobe.com/tw/support/programs/eol-matrix.html)。請到[這裡](https://experienceleague.adobe.com/docs/?lang=zh-Hant)尋找支援的版本。
 
 >[!IMPORTANT]
 >
@@ -412,7 +412,7 @@ _已知問題_
 * **AEM as a Cloud Service 2024.1.0** – 請造訪 [https://adobe.ly/3w2lhBL](https://adobe.ly/3w2lhBL) 了解更新資訊。
 * **AEM 社群論壇使用者最新部落格**
    * [如何透過 AEM JMX 觸發 Oak 索引，啟動套用應用程式變更的索引定義的過程](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager-blogs/how-to-trigger-oak-index-via-aem-jmx-to-start-the-process-of/ba-p/650118)
-   * [如何不將分類法遷移到 AEM Assets](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager-blogs/how-not-to-migrate-taxonomies-to-aem-assets/ba-p/648931)
+   * [如何不將分類法移轉到 AEM Assets](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager-blogs/how-not-to-migrate-taxonomies-to-aem-assets/ba-p/648931)
    * [探索 AEM 的隱藏力量：解鎖 OSGi 奇蹟](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager-blogs/exploring-aem-s-hidden-power-unlocking-osgi-marvels/ba-p/648162)
    * [AEM 6.5.5 未建立索引問題 *已修復*](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager-blogs/aem-6-5-5-not-indexing-problem-fixed/ba-p/639836)
 
@@ -558,7 +558,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 ### 最新 Campaign 產品版本
 
-* **新增！** [!DNL Campaign Web Interface]: [新增內容](https://experienceleague.adobe.com/docs/campaign-web/v8/whats-new.html?lang=zh-Hant) | [產品文件](https://experienceleague.adobe.com/docs/campaign-web/v8/campaign-web-home.html?lang=zh-Hant)
+* **新增！** [!DNL Campaign Web Interface]：[新增內容](https://experienceleague.adobe.com/docs/campaign-web/v8/whats-new.html?lang=zh-Hant) | [產品文件](https://experienceleague.adobe.com/docs/campaign-web/v8/campaign-web-home.html?lang=zh-Hant)
 
 * **新增！** [!DNL Campaign] v8.6：[發行說明](https://experienceleague.adobe.com/docs/campaign/campaign-v8/releases/release-notes.html?lang=zh-Hant) | [產品文件](https://experienceleague.adobe.com/docs/campaign/campaign-v8/campaign-home.html?lang=zh-Hant)
 
@@ -735,7 +735,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 ## ![圖示](/assets/ec_appicon_24.png) [!DNL Adobe Mix Modeler] {#mix-modeler}
 
-+++詳細資料
++++詳細資訊
 
 請參閱以下頁面了解最新資訊：
 
@@ -764,7 +764,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 [!DNL Adobe Pass] 是多螢幕電視平台，可協助電視台、有線電視網路和服務提供者，讓他們打造具吸引力的個人化觀看體驗並藉此創造營收。
 
-+++詳細資料
++++詳細資訊
 
 >[!NOTE]
 >
