Updated by task 'FY24_April_DX_RNs_HO1'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/de7d3ae4a42a5fe495b42ae3d8b526ad2c90101d

--- a/c-legacy-releases/2024/01112024.md
+++ b/c-legacy-releases/2024/01112024.md
@@ -5,8 +5,9 @@ doc-type: release notes
 last-update: January 2024
 author: mfrei
 mini-toc-levels: 2
-source-git-commit: dfbb8e7d15a3cd7c00a3078b0138a5a832a818a9
-workflow-type: tm+mt
+exl-id: 0cea27bc-3908-4225-86b6-c7e3aad10a0c
+source-git-commit: 590f0a21ab8ef16b2ccf9f651a2ef2e7cae48ff3
+workflow-type: ht
 source-wordcount: '6121'
 ht-degree: 100%
 
@@ -296,7 +297,7 @@ ht-degree: 100%
 
 現有客戶可以繼續使用他們實施的 [!DNL DIL]。然而，Adobe 從該時間點起不會再開發 [!DNL DIL]。建立客戶針對其長期資料收集策略來評估 [Experience Platform Web SDK](https://experienceleague.adobe.com/docs/experience-platform/edge/home.html?lang=zh-Hant)。若客戶希望在 2023 年 7 月後實施新資料收集整合，他們應該使用 [Experience Platform Web SDK](https://experienceleague.adobe.com/docs/experience-platform/edge/home.html?lang=zh-Hant)。
 
-如需自助資源，請參閱 Experience League 上的 [Audience Manager 文件與教學課程](https://experienceleague.adobe.com/docs/audience-manager.html)。
+如需自助資源，請參閱 Experience League 上的 [Audience Manager 文件與教學課程](https://experienceleague.adobe.com/docs/audience-manager.html?lang=zh-Hant)。
 
 +++
 
@@ -416,7 +417,7 @@ _版本重點_
 
 >[!NOTE]
 >
->AEM 6.4 現在已終止延伸支援。如需更多詳細資料，請參閱 Adobe 的[技術支援期間](https://helpx.adobe.com/tw/support/programs/eol-matrix.html)。請到[這裡](https://experienceleague.adobe.com/docs/?lang=en)尋找支援的版本。
+>AEM 6.4 現在已終止延伸支援。如需更多詳細資料，請參閱 Adobe 的[技術支援期間](https://helpx.adobe.com/tw/support/programs/eol-matrix.html)。請到[這裡](https://experienceleague.adobe.com/docs/?lang=zh-Hant)尋找支援的版本。
 
 >[!IMPORTANT]
 >
@@ -443,8 +444,8 @@ _已知問題_
 * [Experience Manager Brand Portal 發行說明](https://experienceleague.adobe.com/docs/experience-manager-brand-portal/using/introduction/brand-portal-release-notes.html?lang=zh-Hant)
 * [Experience Manager 桌面應用程式發行說明](https://experienceleague.adobe.com/docs/experience-manager-desktop-app/using/release-notes.html?lang=zh-Hant)
 * [Experience Manager Dispatcher 發行說明](https://experienceleague.adobe.com/docs/experience-manager-dispatcher/using/getting-started/release-notes.html)
-* [Adobe Primetime 發行說明](https://experienceleague.adobe.com/docs/primetime/release-notes/home.html)
-* [Livefyre 發行說明](https://experienceleague.adobe.com/docs/discontinued/using/livefyre.html)
+* [Adobe Primetime 發行說明](https://experienceleague.adobe.com/docs/primetime/release-notes/home.html?lang=zh-Hant)
+* [Livefyre 發行說明](https://experienceleague.adobe.com/docs/discontinued/using/livefyre.html?lang=zh-Hant)
 
 ### 全新 [!DNL Experience Manager] 教學課程和其他課程 {#tutorials-aem}
 
@@ -528,7 +529,7 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 
 >[!NOTE]
 >
->[!DNL Adobe Search&Promote] 服務終止時間為 **2022 年 9 月 1 日**。 對於產品和商業搜尋，[Live Search ](https://experienceleague.adobe.com/docs/commerce-merchant-services/live-search/overview.html)是 Adobe 的搜尋應用程式。如需了解詳細資訊，請參閱[產品壽命結束公告](https://experienceleague.adobe.com/docs/discontinued/using/search-promote.html)。
+>[!DNL Adobe Search&Promote] 服務終止時間為 **2022 年 9 月 1 日**。 對於產品和商業搜尋，[Live Search ](https://experienceleague.adobe.com/docs/commerce-merchant-services/live-search/overview.html?lang=zh-Hant)是 Adobe 的搜尋應用程式。如需了解詳細資訊，請參閱[產品壽命結束公告](https://experienceleague.adobe.com/docs/discontinued/using/search-promote.html?lang=zh-Hant)。
 
 ### 全新的 [!DNL Adobe Commerce] 教學課程 {#tutorials-commerce}
 
@@ -589,7 +590,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 * 控制面板：[發行說明](https://experienceleague.adobe.com/docs/control-panel/using/release-notes/release-notes.html?lang=zh-Hant)
 
-在 [Campaign v7](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html)、[Campaign v8](https://experienceleague.adobe.com/docs/campaign/campaign-v8/releases/release-notes.html) 和 [Campaign Standard](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html) 發行說明中進一步了解最新功能、改進與修正。
+在 [Campaign v7](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html?lang=zh-Hant)、[Campaign v8](https://experienceleague.adobe.com/docs/campaign/campaign-v8/releases/release-notes.html?lang=zh-Hant) 和 [Campaign Standard](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant) 發行說明中進一步了解最新功能、改進與修正。
 
 ### 新的 [!DNL Campaign] 支援知識庫{#kb-campaign}
 
@@ -754,7 +755,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 ## ![圖示](/assets/ec_appicon_24.png) [!DNL Adobe Mix Modeler] {#mix-modeler}
 
-+++詳細資料
++++詳細資訊
 
 請參閱以下頁面了解最新資訊：
 
@@ -783,13 +784,13 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 [!DNL Adobe Pass] 是多螢幕電視平台，可協助電視台、有線電視網路和服務提供者，讓他們打造具吸引力的個人化觀看體驗並藉此創造營收。
 
-+++詳細資料
++++詳細資訊
 
 >[!NOTE]
 >
 >_[!DNL Adobe Primetime]_現在稱為_[!DNL Adobe Pass]_。在品牌重塑工作完成之前，您可能很快就會在文件中看到這兩個品牌名稱。
 
-請參閱 [Adobe Pass 發行說明](https://experienceleague.adobe.com/docs/primetime/release-notes/home.html)以找到特定版本的資訊、系統需求、限制、已修正的問題和已知問題。
+請參閱 [Adobe Pass 發行說明](https://experienceleague.adobe.com/docs/primetime/release-notes/home.html?lang=zh-Hant)以找到特定版本的資訊、系統需求、限制、已修正的問題和已知問題。
 
 +++
 
