--- a/c-legacy-releases/2024/03132024.md
+++ b/c-legacy-releases/2024/03132024.md
@@ -5,10 +5,11 @@ doc-type: release notes
 last-update: March 2024
 author: mfrei
 mini-toc-levels: 2
-source-git-commit: 6cc89ecac35f6a015aaade05ff7581ec75a057d9
-workflow-type: tm+mt
+exl-id: 62141f30-b6b4-4813-a819-35262ed8e0c1
+source-git-commit: ae357415647cea90c958d64a901e33b9d85051ed
+workflow-type: ht
 source-wordcount: '5860'
-ht-degree: 96%
+ht-degree: 100%
 
 ---
 
@@ -31,16 +32,16 @@ ht-degree: 96%
 
 ## 2024 年 3 月
 
-最新更新： **2024年3月31日**
+最近更新日期：**2024 年 3 月 31 日**
 
-* [[!DNL Experience League] 活動和更新](#events) (已更新 **3月29日**)
+* [[!DNL Experience League] 活動與最新訊息](#events) (更新日期：**3 月 29 日**)
 * [Adobe 的認證](#certification)
 * [[!DNL Adobe System Status]](#status)
 * [[!DNL Adobe Experience Cloud] - 統一介面與管理](#ecloud)
 * [[!DNL Adobe Experience Platform]](#platform)
 * [[!DNL Adobe Real-Time Customer Data Platform]](#rtcdp)
-* [[!DNL Adobe Analytics]](#analytics) (已發行 **3月13日**)
-* [[!DNL Adobe Customer Journey Analytics]](#cja) (已發行 **3月13日**)
+* [[!DNL Adobe Analytics]](#analytics)(發行日期：**3 月 31 日**)
+* [[!DNL Adobe Customer Journey Analytics]](#cja)(發行日期：**3 月 31 日**)
 * [[!DNL Adobe Streaming Media Analytics]](#sma)
 * [[!DNL Adobe Experience Manager]](#aem)
 * [[!DNL Adobe Commerce]](#commerce)
@@ -66,15 +67,15 @@ ht-degree: 96%
 
 ### Experience League 活動
 
-已更新 **2024年3月31日**
+更新日期：**2024 年 3 月 31 日**
 
 +++詳細資訊
 
-* **Workfront** | 客戶工作坊 | _瞭解：Adobe Workfront中的10個文字模式秘訣_ | 想要以文字模式擴展您的報告知識嗎？ 不要再往前看！ 此研討會將提供文字模式基本原理和API Explorer的簡介，之後將提供Adobe Workfront中的10個文字模式提示。 | **4 月 18 日上午 9:00 (太平洋時間)** | [報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,PiX3iDTmREqs2eOICcUIoA,5KJVGb6S_Uiiki7ErNALgw,--xUIfX6gEqCcuYNDuE5IA,S8LJKpyI4kywiEO88_bvdg,Z6HaWjLNV0CaMzwT0JeWQg?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
+* **WORKFRONT** | 客戶研討會 | _學習：Adobe Workfront 中的 10 個文字模式提示_ | 想透過文字模式擴展您的報告知識嗎？別再猶豫了！本研討會將簡要介紹文字模式基本知識和 API Explorer，然後介紹 Adob&#x200B;&#x200B;e Workfront 中的 10 個文字模式提示。| **4 月 18 日上午 9:00 (太平洋時間)** | [報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,PiX3iDTmREqs2eOICcUIoA,5KJVGb6S_Uiiki7ErNALgw,--xUIfX6gEqCcuYNDuE5IA,S8LJKpyI4kywiEO88_bvdg,Z6HaWjLNV0CaMzwT0JeWQg?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
 
-* **Workfront** | 社群活動 | _Connect： Workfront Collective_ | 與您的Workfront系統管理員同仁一起參加這個每月一次的集體腦力激盪和分享座談會，我們將討論最新更新和最佳實務。 | **4 月 22 日上午 06:00 (太平洋時間)** | [報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,mjTFCSLTbkuVKavNdopApA,dndSyq-qPkqd5A929WkXkw,PLjes69h2kitBUQrGr_tSQ,9hwaemfUG0uEqL-RwJW9fQ,OzGfEfueq0yp19zAhpjfwA?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
+* **WORKFRONT** | 社區活動 | _交流：Workfront Collective_ | 與您的 Workfront 系統管理員同事一起參加每月一次的集體腦力激盪和分享會議，我們將在會議上討論最新的更新和最佳實務。| **4 月 22 日上午 06:00 (太平洋時間)** | [報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,mjTFCSLTbkuVKavNdopApA,dndSyq-qPkqd5A929WkXkw,PLjes69h2kitBUQrGr_tSQ,9hwaemfUG0uEqL-RwJW9fQ,OzGfEfueq0yp19zAhpjfwA?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
 
-* **Workfront** | 問答聊天 | _詢問：移轉至Adobe Business Platform_ | 加入我們的技術支援工程師，一同參加問答會，瞭解期望完成的任務，以及如何為Adobe業務平台遷移做好最充分的準備。 | **4 月 23 日上午 08:00 (太平洋時間)** | [報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,mjTFCSLTbkuVKavNdopApA,dndSyq-qPkqd5A929WkXkw,wXdzewqwQEO_SiY5SC4i2Q,r3bZVp0PVkObL30IXUw5iA,1p0c3CZ2qEGQBAZpsDvvEw?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
+* **WORKFRONT** | 問答聊天 | _詢問：移轉至 Adob&#x200B;&#x200B;e Business Platform_ | 參加由我們技術支援工程師進行的問答時間，了解會發生什麼以及如何為 Adob&#x200B;&#x200B;e Business Platform 移轉做好最佳準備。| **4 月 23 日上午 08:00 (太平洋時間)** | [報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,mjTFCSLTbkuVKavNdopApA,dndSyq-qPkqd5A929WkXkw,wXdzewqwQEO_SiY5SC4i2Q,r3bZVp0PVkObL30IXUw5iA,1p0c3CZ2qEGQBAZpsDvvEw?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
 
 檢視更多[即將舉行的活動](https://experienceleague.adobe.com/events/)或瀏覽 Experience League 上的[活動錄影](https://experienceleague.adobe.com/docs/events/experience-league-recorded-events/overview.html?lang=zh-Hant)。
 
@@ -82,7 +83,7 @@ ht-degree: 96%
 
 ## ![圖示](/assets/experience-league.png) Adobe 內容供應鏈 {#content-supply-chain}
 
-瞭解 [內容供應鏈](https://business.adobe.com/solutions/adobe-genstudio.html)，Adobe的端對端解決方案，可透過創作AI和智慧型自動化加速及簡化您的內容。
+了解關於[內容供應鏈](https://business.adobe.com/solutions/adobe-genstudio.html)；這是 Adobe 一種端對端解決方案，可透過生成式 AI 和智慧型自動化來加速和簡化您的內容。
 
 +++詳細資訊
 
@@ -709,9 +710,9 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 ### [!DNL Adobe Workfront] 更新
 
-* 請參閱 [Adobe Workfront產品發行](https://experienceleague.adobe.com/en/docs/workfront/using/product-announcements/product-releases/product-releases) Workfront發行排程資訊和發行說明頁面。
+* 請參閱 [Adobe Workfront 產品版本](https://experienceleague.adobe.com/en/docs/workfront/using/product-announcements/product-releases/product-releases) 頁面，了解 Workfront 版本計畫資訊和版本說明。
 
-* 請參閱 [Adobe Workfront Fusion發行活動概覽](https://experienceleague.adobe.com/en/docs/workfront/using/product-announcements/product-releases/fusion-release/fusion-release-activity) 以取得Fusion的最新資訊。
+* 請參閱「[Adobe Workfront Fusion 發佈活動概觀](https://experienceleague.adobe.com/en/docs/workfront/using/product-announcements/product-releases/fusion-release/fusion-release-activity)」了解有關 Fusion 的最新資訊。
 
 ### 新的 Adobe [!DNL Workfront] 課程與教學課程 {#tutorials-workfront}
 
@@ -740,7 +741,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 {style="table-layout:auto"}
 -->
 
-如需最新的產品檔案，請參閱 [Adobe [!DNL Workfront] 檔案首頁](https://experienceleague.adobe.com/en/docs/workfront/using/home).
+如需最新的產品文件，請參閱 [Adobe [!DNL Workfront]  產品文件首頁](https://experienceleague.adobe.com/en/docs/workfront/using/home)。
 
 +++
 
@@ -763,7 +764,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 ### [!DNL Advertising DSP] 中的新功能 {#advertising-dsp}
 
-查看 [ [!DNL Advertising DSP] 新增資產](https://experienceleague.adobe.com/docs/advertising/dsp/home.html?lang=zh-Hant)
+查看 [ [!DNL Advertising DSP] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/dsp/home.html?lang=zh-Hant)
 
 ### [!DNL Advertising Search, Social, & Commerce] 中的新功能 {#advertising-search}
 
